# query

./: .gitignore  app.3.py  app.mongo.py  app.py  app.pydantic-dataclass.py  app.pydantic-generic.py  app.pydantic-positional.py  app.simple-expressions.py  app.v3.py  pyproject.toml  tst.class-property.py  tst.decorator.py
query/: __init__.py  builders.py  constants.py  enums.py  errors.py  expression.py  expressions.py  models.py  operators.py  parse.py  types.py
query/v1/: builders.py  constants.py  errors.py  expression.py  models.py  parse.py  parse2.py  types.py
query/v2/: builders.py  constants.py  enums.py  expression.py  types.py
tests/: test_make_explicit.py  test_parse.py
